infrastructure/kubernetes/tendersbay-xyz/backend/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: tendersbay-xyz
spec:
  type: NodePort
  selector:
    app: tendersbay-xyz
    tier: backend
  ports:
    - port: 30082
      targetPort: 8080
      protocol: TCP
